/*
Copyright (C) 2022 Graeme Sutherland


This program is fre software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/
///
// CWC Protocol
//
syntax = "proto3";
option go_package = ".;cwcpb";

message EnumerateChannels {}

message ListChannels {
    repeated uint32 channel_ids = 1;
}

message TimeSync {
     int64 current_time = 1;
}

message TimeSyncResponse {
     int64 given_time = 1;
     int64 server_rx_time = 2;
     int64 server_tx_time = 3;
}

message ListenRequest {
     uint32 channel_id = 1;
     string callsign = 2;
}

message ListenConfirm {
     uint32 channel_id = 1;
     uint32 carrier_key = 2;
}

message UnlistenRequest {
     uint32 channel_id = 1;
     uint32 carrier_key = 2;
}

message KeyValue {
     uint32 channel_id = 1;
     uint32 carrier_key = 2;
     string key = 3;
     string value = 4;
}

message CarrierEvent {

    message BitEvent {
         uint32 time_offset = 1;
         bool bit_event = 2;
         bool last = 3;
    }

     uint32 channel_id = 4;
     uint32 carrier_key = 5;
     int64 start_timestamp = 6;
     int64 send_timestamp = 7;
    repeated BitEvent bit_events = 8;
}

message VersionInfo {
    message Version {
         int32 major = 1;
         int32 minor = 2;
         int32 patch = 3;
         string release = 4;
    }
     VersionInfo my_protocol_version = 1;
     VersionInfo my_code_version = 2;
     VersionInfo latest_stable_version = 3;
}

message CWCMessage {
     oneof msg {
          CarrierEvent carrier_event = 1;
          TimeSync time_sync = 2;
          TimeSyncResponse time_sync_response = 3;
          ListenRequest listen_request = 4;
          ListenConfirm listen_confirm = 5;
          UnlistenRequest unlisten_request = 6;
          EnumerateChannels enumerate_channels= 7;
          ListChannels list_channels = 8;
          VersionInfo version_info = 9;
          KeyValue key_value = 10;
     }
}